Feature/aggregate on missing data (#182)
* capture missing terms in query

* testing

* doc and testing

* Add missingData to original aggregations query

* test coverage

* test coverage

* Code review